--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,11 @@ a:active{
     box-sizing: border-box;
     width: 380px;
     height: 398px;
-    background-color:gray;
+    background-color:rgb(224, 217, 217);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5)
+}
+.products__item:hover{
+    background-color:rgb(0, 140, 255);
 }
 
 /*-----samples-----------*/
